<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.sponsors.ui.SponsorRegistration">

    <TextView
        android:id="@+id/tvSponsorHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/SponsorHeader"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSponsorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Organization Name"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvSponsorHeader" />

    <EditText
        android:id="@+id/etBudgetAmt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Budget Amount"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/etSponsorName" />

    <EditText
        android:id="@+id/etSponsorEmail"
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/etBudgetAmt" />

    <EditText
        android:id="@+id/etSponsorPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/etSponsorEmail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90107054" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <TextView
        android:id="@+id/tvDonationBreakdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Donation Item Breakdown"
        android:textSize="@dimen/subheading_size"
        app:layout_constraintStart_toStartOf="@+id/tvSponsorHeader"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
        android:id="@+id/tvWaterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Water"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvDonationBreakdown" />


    <TextView
        android:id="@+id/tvFoodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Food"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvMedicineLabel" />

    <TextView
        android:id="@+id/tvClothesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Clothes"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvFoodLabel" />

    <TextView
        android:id="@+id/tvConstructionMaterialsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Construction Materials"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvClothesLabel" />

    <SeekBar
        android:id="@+id/sbMaterials"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:max="10"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="@+id/tvConstructionMaterialsLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/tvConstructionMaterialsLabel"
        app:layout_constraintVertical_bias="0.0" />


    <SeekBar
        android:id="@+id/sbClothes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:max="10"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="@+id/tvClothesLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/tvClothesLabel" />

    <TextView
        android:id="@+id/tvMedicineLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Medicine"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvWaterLabel" />


    <SeekBar
        android:id="@+id/sbWater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:max="10"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="@+id/tvWaterLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/tvWaterLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Budget: "
        android:textSize="31sp"
        android:id="@+id/tvBudget"
        app:layout_constraintBottom_toTopOf="@+id/btnSavePreferences"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/sbMaterials" />



    <SeekBar
        android:id="@+id/sbMedicine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:max="10"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="@+id/tvMedicineLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/tvMedicineLabel" />

    <SeekBar
        android:id="@+id/sbFood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:max="10"
        android:min="0"
        app:layout_constraintBottom_toBottomOf="@+id/tvFoodLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/tvFoodLabel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <Button
        android:id="@+id/btnSavePreferences"
        android:padding="15dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/save_preferences"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/sbMaterials" />


</androidx.constraintlayout.widget.ConstraintLayout>